<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_first" />
        <item
            android:id="@+id/nav_second"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_second" />
        <item
            android:id="@+id/nav_third"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_third" />
        <item
            android:id="@+id/nav_fourth"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_fourth" />
        <item
            android:id="@+id/nav_fifth"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_fifth" />
    </group>
</menu>